--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 cmake
 streamlit == 1.3.1
-opencv-python-headless== 4.3.0.38
+opencv
 tensorflow-cpu
 numpy == 1.20.3
 mtcnn
@@ -11,4 +11,4 @@ gdown
 dnspython
 gitpython
 scikit-image
-dlib
+dlib==19.4
